--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Rahyab Payam Gostaran SMS package for Laravel",
     "type": "library",
     "license": "MIT",
+    "version": "1.0.0",
     "authors": [
         {
             "name": "amir aghaee",
@@ -10,7 +11,9 @@
         }
     ],
     "require": {
-        "ext-soap": "*"
+        "ext-soap": "*",
+        "php": ">=7.2",
+        "laravel/framework": "^8.0"
     },
     "autoload": {
         "psr-4": {
