--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "ext-soap": "*",
         "php": ">=7.2",
-        "laravel/framework": "^8.0"
+        "laravel/framework": ">=8.0"
     },
     "autoload": {
         "psr-4": {
